fixing layout problems

--- a/style/style.css
+++ b/style/style.css
@@ -182,7 +182,11 @@ form div input[type="submit"] {
 
 @media (max-width: 32rem) {
   body {
-    width: 32rem;
+    width: 100%;
+  }
+  
+  form div {
+    clear: both;
   }
   
   form .full-width {
@@ -200,7 +204,7 @@ form div input[type="submit"] {
   }
   
   form div label {
-    width: 25%;
+    width: 30%;
   }
 
   form .full-width input {
